# pyeyes

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  TODO.md  env.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: docs.yml  publish-dev.yml  publish.yml
api/: index.html
api_core/: index.html
api_main/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  api_core.md  api_main.md  changelog.md  contributing.md  index.md  user_guide.md
search/: search_index.json
src/pyeyes/: __init__.py  app.py  config.py  dti.py  enums.py  error.py  icons.py  line.py  metrics.py  plot_config.py  plotting.py  profilers.py  roi.py  slicers.py  themes.py  utils.py  viewer2.py  viewers.py
src/pyeyes/cmap/: __init__.py  cmap.py
src/pyeyes/gradio/: roi_gradio.py
src/pyeyes/gradio_version/: roi.py  roi_gradio.py
src/pyeyes/gui/: __init__.py  pane.py  scroll.py  widget.py
src/pyeyes/mpl/: dti.py  mpl.py  mpl_config.py  roi.py
src/pyeyes/prototypes/: line.py
src/pyeyes/prototypes/mpl/: dti.py  mpl_config.py
src/pyeyes/q_cmap/: cmap.py
tests/: README.md  compare_cplx.py  compare_diffusion.py  compare_mrf.py  compare_mrf_4view.py  download_test_data.py  paths.py  test_af.py  test_blank.py  test_cplx.py  test_diffusion.py  test_dim_input.py  test_dti.py  test_export_reloadable.py  test_gradio_roi.py  test_mrf.py  test_mrf_4view.py  test_multiviewers.py  test_new_viewer.py  test_single_image.py  test_single_image_new_img_same_config.py  ztest_blank.py  ztest_cplx.py  ztest_diffusion.py  ztest_mrf.py  ztest_mrf_4view.py  ztest_multiviewers.py
tests/cfgs/: cfg_af.yaml  cfg_cplx.yaml  cfg_diff.yaml  cfg_mrf_1min_vs_2min.yaml  cfg_mrf_4view.yaml  cfg_mrf_single.yaml  config_mrf.yaml  cplx_config.yaml
tests/comparative/: __init__.py  conftest.py
tests/comparative/basic/: __init__.py  test_blank.py  test_cplx.py  test_data_input_modes.py  test_dim_input.py  test_single_image.py
tests/comparative/gui/: test_analysis_features.py  test_contrast_features.py  test_export_features.py  test_roi_features.py  test_tab_navigation.py  test_view_features.py  test_viewtab.py
tests/comparative/load/: __init__.py  test_cfg_compat.py  test_diffusion.py  test_export_reloadable.py  test_mrf.py  test_multiviewers.py
tests/prototypes/: depr_test_dti.py  test_dti.py
tests/test-data/af/: x_af.npy  x_gt.npy  x_no_comp.npy  x_smooth.npy
user_guide/: index.html
