[build-system]
requires = [
   "setuptools",
   "wheel",
   "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyeyes"
version = "0.1.1"
authors = [
  { name="Zachary Shah", email="zshah9@stanford.edu" },
  { name="Yonatan Urman", email="yurman@stanford.edu" },
]
description = "A GUI viewer for high-dimensional image visualization in Python"
readme = "README.md"
requires-python = ">=3.10.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "holoviews>=1.20.0",
    "bokeh>=3.6.2",
    "nibabel",
    "scipy",
    "jupyter_bokeh",
    "scikit-image",
]

[project.urls]
Homepage = "https://github.com/zachary-shah/pyeyes"
Repository = "https://github.com/zachary-shah/pyeyes"
"Bug Tracker" = "https://github.com/zachary-shah/pyeyes/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
]

[tool.setuptools]
packages = ["pyeyes"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pyeyes = ["cmap/*.csv"]
